--- a/FieldEdge.Server/appsettings.json
+++ b/FieldEdge.Server/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SystemConfigurations": {
+    "AppName": "FieldEdge",
+    "APIServerBaseUrl": "https://getinvoices.azurewebsites.net/api/",
+    "APIServerUsername": "admin",
+    "APIServerPassword": "8542635874125123", // Password should be encrypted for Live Applications
+    "APIServerToken": "My appsettings.json Value"
+  }
 }
