--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.0",
     "react-router-dom": "^6.23.1"
   }
