Added Enhanced Logs

--- a/FieldEdge.Server/appsettings.json
+++ b/FieldEdge.Server/appsettings.json
@@ -8,9 +8,10 @@
   "AllowedHosts": "*",
   "SystemConfigurations": {
     "AppName": "FieldEdge",
+    "Origins": "https://localhost:7190;https://localhost:5173",
     "APIServerBaseUrl": "https://getinvoices.azurewebsites.net/api/",
     "APIServerUsername": "admin",
-    "APIServerPassword": "8542635874125123", // Password should be encrypted for Live Applications
+    "APIServerPassword": "8542635874125123SDFGSDFGSFDGSFDG9999", // Password should be encrypted for Live Applications
     "APIServerToken": "My appsettings.json Value"
   }
 }
